Fix unused imports