@@ -21,11 +21,8 @@
  */
 package org.mustangproject.ZUGFeRD;
 
-import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import junit.framework.TestCase;
-import org.junit.Assert;
 import org.junit.FixMethodOrder;
 import org.junit.runners.MethodSorters;
 import org.mustangproject.*;
@@ -34,9 +31,7 @@ import org.mustangproject.ZUGFeRD.model.EventTimeCodeTypeConstants;
 import javax.xml.xpath.XPathExpressionException;
 import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
 import java.math.BigDecimal;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
@@ -67,7 +62,7 @@ public class DeSerializationTest extends ResourceCase {
 
 		ZUGFeRDInvoiceImporter zii = new ZUGFeRDInvoiceImporter();
 		try {
-			zii.fromXML(new String(Files.readAllBytes(inputCII.toPath()), StandardCharsets.UTF_8));
+			zii.fromXML(Files.readString(inputCII.toPath()));
 
 		} catch (IOException e) {
 			hasExceptions = true;
@@ -76,9 +71,7 @@ public class DeSerializationTest extends ResourceCase {
 		CalculatedInvoice ci = new CalculatedInvoice();
 		try {
 			zii.extractInto(ci);
-		} catch (XPathExpressionException e) {
-			hasExceptions = true;
-		} catch (ParseException e) {
+		} catch (XPathExpressionException | ParseException e) {
 			hasExceptions = true;
 		}
 		ObjectMapper mapper = new ObjectMapper();
@@ -174,7 +167,7 @@ public class DeSerializationTest extends ResourceCase {
 		String exText = null;
 
 		try {
-			zii.fromXML(new String(Files.readAllBytes(inputUBL.toPath()), StandardCharsets.UTF_8));
+			zii.fromXML(Files.readString(inputUBL.toPath()));
 			ObjectMapper mapper = new ObjectMapper();
 			zii.extractInto(i);
 			String json = mapper.writeValueAsString(i);
@@ -186,11 +179,7 @@ public class DeSerializationTest extends ResourceCase {
 			assertEquals(newInvoiceFromJSON.getAdditionalReferencedDocuments().length, 2);
 
 
-		} catch (IOException e) {
-			exText = e.getMessage();
-		} catch (XPathExpressionException e) {
-			exText = e.getMessage();
-		} catch (ParseException e) {
+		} catch (IOException | ParseException | XPathExpressionException e) {
 			exText = e.getMessage();
 		}
 		assertNull(exText);
@@ -286,7 +275,7 @@ public class DeSerializationTest extends ResourceCase {
 		ZUGFeRDInvoiceImporter zii = new ZUGFeRDInvoiceImporter();
 		zii.doIgnoreCalculationErrors();
 		try {
-			zii.fromXML(new String(Files.readAllBytes(inputCII.toPath()), StandardCharsets.UTF_8));
+			zii.fromXML(Files.readString(inputCII.toPath()));
 			ObjectMapper mapper = new ObjectMapper();
 			zii.extractInto(i);
 			String json = mapper.writeValueAsString(i);
@@ -295,11 +284,7 @@ public class DeSerializationTest extends ResourceCase {
 			assertEquals("Test_EeISI_100", i.getNumber());
 			assertEquals(newInvoiceFromJSON.getNumber(), i.getNumber());
 
-		} catch (IOException e) {
-			exText = e.getMessage();
-		} catch (XPathExpressionException e) {
-			exText = e.getMessage();
-		} catch (ParseException e) {
+		} catch (IOException | ParseException | XPathExpressionException e) {
 			exText = e.getMessage();
 		}
 		assertNull(exText);
@@ -340,9 +325,7 @@ public class DeSerializationTest extends ResourceCase {
 			ObjectMapper mapper = new ObjectMapper();
 			String json = mapper.writeValueAsString(i);
 			newInvoiceFromJSON = mapper.readValue(json, Invoice.class);
-		} catch (ParseException e) {
-			hasExceptions = true;
-		} catch (JsonProcessingException e) {
+		} catch (ParseException | JsonProcessingException e) {
 			hasExceptions = true;
 		}
 		assertEquals(newInvoiceFromJSON.getBuyerOrderReferencedDocumentID(), "28934");
